--- a/index.html
+++ b/index.html
@@ -59,31 +59,32 @@
       <section>
         <h2>ĐỒ ÁN HỌC TẬP (ĐỊNH HƯỚNG HỖ TRỢ HỆ THỐNG)</h2>
 
-        <h3>1. Tìm hiểu Linux & Triển khai Web Server</h3>
+        <h3>1. Cài Đặt Hệ Điều Hành Linux & Triển Khai Cấu Hình Dịch Vụ Web Server</h3>
         <ul>
-          <li>Cài đặt và cấu hình hệ điều hành Linux</li>
-          <li>Quản lý user, phân quyền, dịch vụ và firewall</li>
-          <li>Triển khai và kiểm tra Apache / Nginx</li>
+          <li>Cài đặt và sử dụng hệ điều hành linux CentOS Stream 9/li>
+          <li>Cấu hình dịch vụ web Apache + PHP + Mysql</li>
+          <li>Triển khai và kiểm tra Apache web wordpress demo</li>
         </ul>
 
-        <h3>2. Thực hành triển khai ứng dụng & môi trường hệ thống</h3>
+        <h3>2. Triển Khai Hệ Thống CI/CD Sử Dụng Docker Trên Nền Tảng Kubernestes</h3>
         <ul>
-          <li>Làm quen quy trình build và deploy ứng dụng</li>
+          <li>Làm quen quy trình build và deploy ứng dụng git/github + DockerHub + K8s + ArgoCD</li>
           <li>Sử dụng Docker container để chạy ứng dụng</li>
           <li>Hiểu môi trường vận hành và các lỗi thường gặp</li>
         </ul>
 
-        <h3>3. Thực hành cấp phát & quản lý vòng đời máy chủ</h3>
+        <h3>3.Xây Dựng Hệ Thống Cấp Phát Máy Chủ Tự Động Và Quản Lý Vòng Đời Máy Chủ</h3>
         <ul>
-          <li>Thiết lập, theo dõi và thu hồi máy chủ</li>
-          <li>Nắm khái niệm quản trị hạ tầng và bảo trì hệ thống</li>
+          <li>Hệ thống cho phép máy chủ khởi động từ mạng để tự động cài và tải OS và công cụ cài đặt</li>
+          <li>Sử dụng Ansible cấu hình tự động giám sát và cập nhật</li>
+          <li>Gán nhãn ghi nhận trạng thái và hành trình sử dụng máy</li>
         </ul>
 
-        <h3>4. Hệ thống quản lý tài sản (hỗ trợ ứng dụng)</h3>
+        <h3>4. Xây dựng hệ thống SmartAsset: Ứng dụng Web, AI và CI/CD Trong Quản Lý Tài Sản Nội Bộ</h3>
         <ul>
-          <li>Cài đặt và cấu hình dịch vụ backend</li>
-          <li>Làm việc với cơ sở dữ liệu và giao diện quản lý</li>
-          <li>Hỗ trợ kiểm thử và xử lý lỗi ứng dụng</li>
+          <li>Xây dựng trang web hệ thống hỗ trợ ghi nhận trạng thái tình trạng của thiết bị tài sản</li>
+          <li>Huấn luyện tích hợp mô hình máy học nhận dạng tình trạng tài sản</li>
+          <li>Kết hợp triển khai theo quy trình CI/CD </li>
         </ul>
       </section>
 
@@ -92,7 +93,6 @@
     <!-- CỘT PHẢI -->
     <div class="right">
 
-      <!-- HỌC VẤN ĐƯA LÊN ĐẦU -->
       <section>
         <h2>HỌC VẤN</h2>
         <p>
@@ -114,7 +114,18 @@
       </section>
 
       <section>
-        <h2>KỸ NĂNG KỸ THUẬT</h2>
+        <h2>KỸ NĂNG HỆ THỐNG</h2>
+        <ul>
+          <li>Nâng cấp RAM, SSD</li>
+          <li>Cài đặt Windows & driver</li>
+          <li>Kiểm tra log và chuẩn đoán lỗi</li>
+          <li>Xử lý sự cố LAN / Wi-Fi cơ bản</li>
+        </ul>
+      </section>
+
+
+      <section>
+        <h2>KỸ NĂNG</h2>
 
         <div class="skill">
           <span>Windows</span>
@@ -137,15 +148,7 @@
         </div>
       </section>
 
-      <section>
-        <h2>KỸ NĂNG HỆ THỐNG</h2>
-        <ul>
-          <li>Nâng cấp RAM, SSD</li>
-          <li>Cài đặt Windows & driver</li>
-          <li>Kiểm tra log và chuẩn đoán lỗi</li>
-          <li>Xử lý sự cố LAN / Wi-Fi cơ bản</li>
-        </ul>
-      </section>
+      
 
     </div>
   </main>
@@ -156,6 +159,6 @@
 
 </div>
 
-<script src="js/main.js"></script>
+<!-- <script src="js/main.js"></script> -->
 </body>
 </html>
